test/errors/invalid_declaration.sg
' Test invalid declaration syntax
(invalid-op foo bar)